<?xml version="1.0"?>
<package>
  <name>lasermux</name>
  <version>0.0.0</version>
  <description>A LaserScan multiplexer, and more.</description>
  <maintainer email="paul@ponteilla.net">Paul Mathieu</maintainer>

  <author email="paul@ponteilla.net">Paul Mathieu</author>

  <license>zLib</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
