<?xml version="1.0"?>
<package>
  <name>lasermux</name>
  <version>0.2.0</version>
  <description>A LaserScan multiplexer, and more.</description>
  <maintainer email="paul@ponteilla.net">Paul Mathieu</maintainer>

  <author email="paul@ponteilla.net">Paul Mathieu</author>

  <license>zLib</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

</package>
